platform/argo-rollouts/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: argo-rollouts-dashboard
  namespace: argo-rollouts

  annotations:
    kubernetes.io/ingress.class: alb

    alb.ingress.kubernetes.io/scheme: internet-facing

    alb.ingress.kubernetes.io/target-type: ip

    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80},{"HTTPS":443}]'

    alb.ingress.kubernetes.io/ssl-redirect: "443"

    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-1:162663626265:certificate/a4eb55e2-32e6-4241-8775-262a19640c13

    alb.ingress.kubernetes.io/backend-protocol: HTTP

    alb.ingress.kubernetes.io/healthcheck-path: /rollouts/

    alb.ingress.kubernetes.io/success-codes: "200"

    external-dns.alpha.kubernetes.io/hostname: argo-rollouts-retail-v2.tinacloud.dev

spec:
  ingressClassName: alb

  rules:
    - host: argo-rollouts-retail-v2.tinacloud.dev

      http:
        paths:
          - path: /
            pathType: Prefix

            backend:
              service:
                name: argo-rollouts-dashboard

                port:
                  number: 3100
